--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
+    "motion": "^12.24.12",
     "next": "16.1.1",
+    "ogl": "^1.0.11",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-vertical-timeline-component": "^3.5.3"
